<resources>
    <string name="app_name">My Application</string>
    <string name="username">username</string>
    <string name="string_password">password</string>
    <string name="LoginImage">TODO</string>
    <string name="register">register</string>
    <string name="remember_me">remember me</string>
    <string name="login">Login</string>
    <string name="login_invalid_username">Incorect username</string>
    <string name="login_invalid_password">Incorect password</string>
    <string name="login_empty_username">Username field is empty</string>
    <string name="login_empty_password">Password field is empty</string>
    <string name="new_user_registration">New user registration</string>
    <string name="main_activity_title">User registration system</string>
    <string name="register_et_username">Username:</string>
    <string name="register_tw_password1">Password:</string>
    <string name="register_tw_password2">Confirm password:</string>
    <string name="register_tw_email">Email:</string>
    <string name="login_tw_password">Password:</string>
    <string name="login_tw_username">Username:</string>
    <string name="register_bt_register">Register</string>
    <string name="back_to_login">Back to login</string>
    <string name="register_empty_password">Password field is empty</string>
    <string name="register_empty_email">Email field is empty</string>
    <string name="register_empty_username">Username field is empty</string>
    <string name="register_invalid_username">Username is invalid</string>
    <string name="register_invalid_password">Password is invalid</string>
    <string name="register_invalid_email">Invalid email</string>
    <string name="pokemon_weigth">Weigth</string>
    <string name="pokemon_heigth">Heigth</string>
    <string name="pokemon_name">Name</string>
    <string name="pokemon_master">Master</string>
    <string name="register_label"> Register new user</string>
    <string name="login_label">Login</string>
    <string name="registerNewEntry_label">Add new pokemon</string>
    <string name="pokemon_power_weak">Weak</string>
    <string name="pokemon_power_medium">Medium</string>
    <string name="pokemon_power_strong">Strong</string>
    <string name="combat_power">Combat Power</string>
    <string name="pokemon_abilities">Abilities</string>
    <string name="pokemon_not_fat">Not fat</string>
    <string name="pokemon_twoHeads">Two heads</string>
    <string name="pokemon_vegan">Vegan</string>
    <string name="pokemon_type">Pokemon type</string>
    <string name="choose_your_pokemon_type">Choose your pokemon type</string>
    <string name="register_tw_username">Username</string>
    <string name="register_tw_title">Register new user</string>
    <string name="register_bt_backToLogin">Back to login</string>
    <string name="register_new_entry_bt_add">Add</string>
    <string name="new_entry_label">Įrašo kūrimas</string>
    <string name="entry_update_label">Įrašo redagavimas</string>


</resources>
