<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tw_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="204dp"
            android:text="@string/pokemon_id"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/et_id"
            app:layout_constraintTop_toTopOf="@+id/et_id" />

        <TextView
            android:id="@+id/tw_name"
            android:layout_width="43dp"
            android:layout_height="17dp"
            android:layout_marginEnd="172dp"
            android:layout_marginTop="36dp"
            android:text="@string/pokemon_name"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/et_name"
            app:layout_constraintTop_toBottomOf="@+id/tw_id" />


        <TextView
            android:id="@+id/tw_weigth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="172dp"
            android:layout_marginTop="92dp"
            android:text="@string/pokemon_weigth"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/et_weigth"
            app:layout_constraintTop_toBottomOf="@+id/tw_id" />

        <TextView
            android:id="@+id/tw_heigth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="174dp"
            android:layout_marginTop="148dp"
            android:text="@string/pokemon_heigth"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/et_heigth"
            app:layout_constraintTop_toBottomOf="@+id/tw_id" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:layout_marginEnd="84dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:layout_marginEnd="84dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_id" />

        <EditText
            android:id="@+id/et_weigth"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:layout_marginEnd="84dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_heigth"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:layout_marginEnd="84dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_weigth" />

        <TextView
            android:id="@+id/tw_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="208dp"
            android:text="@string/combat_power"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_heigth" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="308dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:text="@string/pokemon_power_weak"
                android:textColor="@color/white"
                tools:ignore="UnusedAttribute"
                tools:layout_editor_absoluteX="258dp"
                tools:layout_editor_absoluteY="276dp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:text="@string/pokemon_power_medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="UnusedAttribute"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="292dp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:text="@string/pokemon_power_strong"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="UnusedAttribute"
                tools:layout_editor_absoluteX="145dp"
                tools:layout_editor_absoluteY="276dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/tw_abilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_abilities"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tw_power"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <CheckBox
            android:id="@+id/cb_cb_vegan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:buttonTint="@color/white"
            android:text="@string/pokemon_vegan"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/cb_twoHeads"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <CheckBox
            android:id="@+id/cb_twoHeads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="144dp"
            android:layout_marginTop="16dp"
            android:buttonTint="@color/white"
            android:text="@string/pokemon_twoHeads"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <CheckBox
            android:id="@+id/register_new_activity_cb_useless"
            android:layout_width="76dp"
            android:layout_height="32dp"
            android:buttonTint="@color/white"
            android:text="@string/pokemon_useless"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/cb_twoHeads"
            app:layout_constraintTop_toTopOf="@+id/cb_twoHeads" />

        <Spinner
            android:id="@+id/registerNewAcivity_type_spinner"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="88dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"

            />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_type"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tw_abilities"
            app:layout_constraintTop_toBottomOf="@+id/cb_cb_vegan" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>